--- a/Web.config
+++ b/Web.config
@@ -11,5 +11,8 @@
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
     </system.web>
-
+    
+    <connectionStrings>
+      <add name="connection" connectionString="Data Source=GORAN\SQLEXPRESS;Initial Catalog=Books;Integrated Security=True"/>
+    </connectionStrings>
 </configuration>
