--- a/Web.config
+++ b/Web.config
@@ -13,6 +13,6 @@
     </system.web>
     
     <connectionStrings>
-      <add name="connection" connectionString="Data Source=GORAN\SQLEXPRESS;Initial Catalog=Books;Integrated Security=True"/>
+      <add name="connection" connectionString="Data Source=DANCHE\SQLEXPRESS;Initial Catalog=Books;Integrated Security=True"/>
     </connectionStrings>
 </configuration>
