--- a/Web.config
+++ b/Web.config
@@ -15,4 +15,7 @@
     <connectionStrings>
       <add name="connection" connectionString="Data Source=GORAN\SQLEXPRESS;Initial Catalog=Books;Integrated Security=True"/>
     </connectionStrings>
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
 </configuration>
