--- a/Web.config
+++ b/Web.config
@@ -13,7 +13,7 @@
     </system.web>
     
     <connectionStrings>
-      <add name="connection" connectionString="Data Source=DANCHE\SQLEXPRESS;Initial Catalog=Books;Integrated Security=True"/>
+      <add name="connection" connectionString="Data Source=GORAN\SQLEXPRESS;Initial Catalog=Books;Integrated Security=True"/>
     </connectionStrings>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
