--- a/Web.config
+++ b/Web.config
@@ -13,8 +13,8 @@
     </system.web>
     
     <connectionStrings>
-        <add name="connection" connectionString="Data Source=GORAN\SQLEXPRESS;Initial Catalog=Books;Integrated Security=True" />
-        <add name="BooksConnectionString" connectionString="Data Source=GORAN\SQLEXPRESS;Initial Catalog=Books;Integrated Security=True"
+        <add name="connection" connectionString="Data Source=DANCHE\SQLEXPRESS;Initial Catalog=Books;Integrated Security=True" />
+        <add name="BooksConnectionString" connectionString="Data Source=DANCHE\SQLEXPRESS;Initial Catalog=Books;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
   <appSettings>
