--- a/Web.config
+++ b/Web.config
@@ -1,23 +1,41 @@
 <?xml version="1.0"?>
-
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
-
 <configuration>
-
-    <system.web>
-      <compilation debug="true" targetFramework="4.5" />
-      <httpRuntime targetFramework="4.5" />
-    </system.web>
+  <system.web>
     
-    <connectionStrings>
-        <add name="connection" connectionString="Data Source=DANCHE\SQLEXPRESS;Initial Catalog=Books;Integrated Security=True" />
-        <add name="BooksConnectionString" connectionString="Data Source=DANCHE\SQLEXPRESS;Initial Catalog=Books;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
+    <httpHandlers>
+      <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+        validate="false" />
+    </httpHandlers>
+    <pages>
+      <controls>
+        <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting"
+          assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      </controls>
+    </pages>
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+      </assemblies>
+    </compilation>
+    <httpRuntime targetFramework="4.5"/>
+  </system.web>
+  <system.webServer>
+    <handlers>
+      <add name="bla" path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    </handlers>
+    <validation validateIntegratedModeConfiguration="false" />
+  </system.webServer>
+  
+  <connectionStrings>
+    <add name="connection" connectionString="Data Source=GORAN\SQLEXPRESS;Initial Catalog=Books;Integrated Security=True"/>
+    <add name="BooksConnectionString" connectionString="Data Source=GORAN\SQLEXPRESS;Initial Catalog=Books;Integrated Security=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+    <add key="ChartImageHandler" value="storage=file;timeout=20;dir=c:\TempImageFiles\;" />
   </appSettings>
 </configuration>
