--- a/Web.config
+++ b/Web.config
@@ -31,8 +31,8 @@
   </system.webServer>
   
   <connectionStrings>
-    <add name="connection" connectionString="Data Source=GORAN\SQLEXPRESS;Initial Catalog=Books;Integrated Security=True"/>
-    <add name="BooksConnectionString" connectionString="Data Source=GORAN\SQLEXPRESS;Initial Catalog=Books;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="connection" connectionString="Data Source=DANCHE\SQLEXPRESS;Initial Catalog=Books;Integrated Security=True"/>
+    <add name="BooksConnectionString" connectionString="Data Source=DANCHE\SQLEXPRESS;Initial Catalog=Books;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
